--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
@@ -1,5 +1,4 @@
 ﻿@using HN120_ShopQuanAo.Data.Models;
-@model IEnumerable<HN120_ShopQuanAo.Data.Models.SanPham>
 @{
 	Layout = "~/Areas/Customer/Views/Shared/_LayoutShopCustomer.cshtml";
 	List<SanPham> lstSanPham = ViewBag.ListSP as List<SanPham>;
@@ -10,7 +9,7 @@
 else{
 	foreach(var item in lstSanPham)
 	{
-        <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-id="@item.MaSp">
+        <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp">
             <div class="col-lg-4 col-md-6">
                 <div class="single_product">
                     <div class="product_thumb">
@@ -19,20 +18,20 @@ else{
                             <img src="~/img/product/@item.UrlAvatar" alt="">
                         </div>
                         <div class="product_action">
-                            <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-id="@item.MaSp"> <i class="fa fa-shopping-cart"></i> Mua Hàng</a>
+                            <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp"> <i class="fa fa-shopping-cart"></i> Mua Hàng</a>
                         </div>
                     </div>
                     <div class="product_content">
                         <span class="product_price">@item</span>
-                        <h3 class="product_title"><a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-id="@item.MaSp">@item.TenSP</a></h3>
+                        <h3 class="product_title"><a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp">@item.TenSP</a></h3>
                     </div>
                     <div class="product_info">
                         <ul>
-                            <li><a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-id="@item.MaSp" data-toggle="modal" data-target="#modal_box" title="Quick view">Xem Chi Tiết</a></li>
+                            <li><a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp" data-toggle="modal" data-target="#modal_box" title="Quick view">Xem Chi Tiết</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
 		</a>
 	}
-}
+}   
