update bán hàng tại quầy

--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon.cshtml
@@ -17,24 +17,24 @@
         <div class="card-header">
             <h2></h2>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" id="Tatca" class="btn btn-warning">Tấ cả</button>
-                        <button type="button" id="bantaiquay" class="btn btn-warning">Bán tai quầy</button>
-                        <button type="button" id="banonline" class="btn btn-success">Bán online</button>
-                    </div>
+                <div class="col-md-6">
+                    <select class="form-select" id="btn_phanloaihoadon" aria-label="Default select example">
+                        <option value="">Tất cả</option>
+                        <option value="1">Tại quầy</option>
+                        <option value="2">Online</option>
+                    </select>
+                   
                 </div>
-                <div class="col-md-12">
-
-                  @*   <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-outline-dark">Tất cả</button>
-                        <button type="button" class="btn btn-outline-primary">Chờ xác nhận</button>
-                        <button type="button" class="btn btn-outline-secondary">Đã xác nhận</button>
-                        <button type="button" class="btn btn-outline-success">Chờ giao hàng</button>
-                        <button type="button" class="btn btn-outline-danger">Đang giao</button>
-                        <button type="button" class="btn btn-outline-warning"> Hoàn thành</button>
-                        <button type="button" class="btn btn-outline-info">Hủy</button>
-                    </div> *@
+                <div class="col-md-6">
+                    <select class="form-select" id="btn_Loctheotrangthai" aria-label="Default select example">
+                        <option value="" selected>Tất cả</option>
+                        <option value="1">Chờ xác nhận</option>
+                        <option value="2">Đã xác nhận</option>
+                        <option value="3">Chờ giao hàng</option>
+                        <option value="4">Đang giao hàng</option>
+                        <option value="5">Đã hoàn thành</option>
+                        <option value="6">Hủy</option>
+                    </select>
                 </div>
             </div>
         </div>
