--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon_partialView.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon_partialView.cshtml
@@ -9,6 +9,11 @@
     IEnumerable<ThanhToan> lstt = ViewBag.lstt as IEnumerable<ThanhToan>;
  
 }
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <div style="height: 600px; overflow-y: auto;" >
 
 
@@ -86,10 +91,10 @@
                     <td style="text-align : center; margin-bottom : 20px">
                         @item.SoDienThoai
                     </td>
-                    <td style="text-align : center; margin-bottom : 20px">
+                    <td style="text-align : center; margin-bottom : 20px" class="money">
                         @item.PhiShip
                     </td>
-                    <td style="text-align : center; margin-bottom : 20px">
+                    <td style="text-align : center; margin-bottom : 20px" class="money">
                         @item.TongGiaTriHangHoa 
                     </td>
                     <td style="text-align : center; margin-bottom : 20px">
@@ -159,3 +164,20 @@
         </tbody>
     </table>
 </div>
+@section scripts {
+    <script>
+        // Định dạng số tiền
+        function formatMoney(amount) {
+            // Sử dụng Intl.NumberFormat để định dạng số tiền thành định dạng tiền tệ với locale hiện tại của trình duyệt
+            return new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(amount);
+        }
+
+        // Duyệt qua các ô chứa số tiền và định dạng
+        $(document).ready(function () {
+            $('.money').each(function () {
+                var amount = parseFloat($(this).text().replace(/,/g, '')); // Lấy số tiền từ văn bản, loại bỏ dấu phân cách nếu có
+                $(this).text(formatMoney(amount)); // Định dạng và gán lại vào văn bản
+            });
+        });
+    </script>
+}
