--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -12,73 +12,65 @@
     var user = ViewBag.Model;
     }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-    <style>
-    #chitiethoadon_table th:nth-child(1),
-    #chitiethoadon_table td:nth-child(1) {
-        display: none;
-    }
-
-
-    </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
 crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="~/css/hoadon.css"/>
 <style>
-    /* Điều chỉnh màu chữ và font chữ */
-    body {
-        font-family: Arial, sans-serif;
-        color: #333;
+    .quantity-input {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 120px; /* Độ rộng của input và button */
     }
 
-    /* Tạo khoảng cách giữa các phần tử */
-    .row {
-        margin-bottom: 20px;
-    }
+        .quantity-input input {
+            border: none; /* Bỏ border của input */
+            width: 50px; /* Độ rộng của input */
+            text-align: center; /* Căn giữa nội dung trong input */
+        }
 
-    /* Thiết lập kích thước cho hình ảnh */
-    img {
-        max-width: 100%;
-        height: auto;
-    }
+        .quantity-input button {
+            width: 30px; /* Độ rộng của button */
+            height: 30px; /* Chiều cao của button */
+            cursor: pointer;
+            border: none;
+            border-radius: 3px;
+        }
 
-    /* Định dạng các nút và input */
-    .btn {
-        border-radius: 0;
-    }
+            .quantity-input button.minus {
+                background-color: #dc3545; /* Màu đỏ cho nút - */
+                color: white;
+            }
 
-    .form-control {
-        border-radius: 0;
-    }
-
-    /* Tạo hiệu ứng hover cho nút */
-    .btn:hover {
-        opacity: 0.8;
-    }
-
+            .quantity-input button.plus {
+                background-color: #28a745; /* Màu xanh lá cây cho nút + */
+                color: white;
+            }
 </style>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/styles/metro/notify-metro.css" />
-<script src="~/js/Hoadon/getdiachi.js"></script>
+
 <script src="~/js/HoaDon.js"></script>
 <div class="container">
     <div class="card">
-        <div class="card-header text-center">
+        <div class="card-header">
            <div class="col-md-12">
                 <input id="btn_ma" style="display:none" class="form-control" type="text" /> <input id="btn_maQR" style="display:none" class="form-control" type="text" value="@ViewBag.RandomString" />
                     </div>
            <div class="row">
               <div class="col-md-5" >
                   <div class="row">
-                        <div class="form-group">
+                        <div class="form-group col-md-4">
                             <label for="btn_UserName">Nhân viên:</label>
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <input class="form-control" type="text" id="btn_UserName" value="@user.UserName" readonly style="display:block"/>
+                                <input class="form-control" type="text" id="btn_UserName" value="@user.UserName" readonly style="display:block;width:100%"/>
                                 <input class="form-control" type="text" id="btn_UserID" value="@user.UserId" readonly style="display:none"/>
                             }
                             else
@@ -87,7 +79,10 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                             }
                             </label>
                         </div>
-                     
+                        <div class="col-md-6">
+                            <label for="btn_NgayTaoDon">Ngày tạo hóa đơn</label>
+                            <input id="btn_NgayTaoDon" class="form-control" type="datetime" />
+                        </div>
                       <div class="col-md-6" style="display:none">
                           <label for="btn_phanloai">PhanLoai</label>
                             <input id="btn_phanloai" class="form-control" type="number" value="1" />
@@ -99,7 +94,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                   </div>
               </div>
 
-              <div class="col-md-12">
+              <div class="col-md-12" style="display:none" id="btn_thongtingiaohang">
                  <div class="row">
                       <div class="col-md-4">
                           <label for="btn_TenKhachHang">Tên khách hàng</label>
@@ -116,10 +111,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                             <label for="btn_SoDienThoai">Số điện thoại</label>
                             <input id="btn_SoDienThoai" class="form-control" type="text" />
                             <div id="phoneError" style="color: red; display: none;">Số điện thoại không hợp lệ.</div>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="btn_NgayTaoDon">Ngày tạo hóa đơn</label>
-                            <input id="btn_NgayTaoDon" class="form-control" type="datetime" />
                         </div>
                       <div class="col-md-4">
                             <label for="City">Tỉnh/Thành phố</label>
@@ -143,6 +134,12 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                             <label for="street">Địa chỉ cụ thể</label>
                             <input type="text" class="form-control" name="Street" id="street">
                       </div>
+                       <div class="col-md-4">
+                            <label for="street">Phí ship</label>
+                            <input id="btn_PhiShip_fake" class="form-control" type="text" min="0" placeholder="Nhập phí vậnchuyển" style="color:brown;border:none" />
+                            <input id="btn_PhiShip" class="form-control" type="number" min="0" placeholder="Nhập phí vậnchuyển" style="color:brown;border:none;display:none" />
+                      </div>
+
                       <div class="col-md-4">
                             <label for="clear"></label>
                             <button type="text" class="form-control w-50 d-grid gap-2 col-6 mx-auto mt-4" name="clear" id="clear">Reset địa chỉ</button>
@@ -172,6 +169,15 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                                           <th style="width:120px">Số lượng mua</th>
                                           <th>Đơn giá</th>
                                           <th>Hành dộng</th>
+                                          <th style="display:none">Mã màu</th>
+                                          <th style="display:none">Mã size</th>
+                                          <th style="display:none">Dongia</th>
+                                          <th style="display:none">Giá bán</th>
+                                          <th style="display:none">Số lượng tồn</th>
+                                          <th style="display:none">Mã sp</th>
+                                          <th style="display:none">Mã KM</th>
+                                          <th style="display:none">IMG</th>
+                                          <th style="display:none">Trạng thái</th>
 
                                       </tr>
                                   </thead>
@@ -243,15 +249,22 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                                                         </td>
                                                         <td class="table-light">
                                                             @item.GiaBan VNĐ<br>
-                                                            Số lượng khả dụng (@item.SoLuongTon)
+                                                            <span class="so-luong-kha-dung"> Số lượng khả dụng (@item.SoLuongTon)</span>
                                                         </td>
                                                         <td class="center-column">
-                                                            <button type="button" class="btn btn-danger btn_chonsp"
+                                                            <button id="btn_chonspchitiet" type="button" class="btn btn-danger btn_chonsp"
                                                                     data-sku="@item.SKU"
+                                                                    data-masp="@item.MaSp"
+                                                                    data-masize="@item.TenSize"
+                                                                    data-masize_="@item.MaSize"
+                                                                    data-mamau_="@item.MaMau"
+                                                                    data-mamau="@item.TenMau"
+                                                                    data-makm="@item.MaKhuyenMai"
+                                                                    data-img="@item.UrlAnhSpct"
+                                                                    data-dongia="@item.Dongia"
                                                                     data-giaban="@item.GiaBan"
                                                                     data-tensp="@item.TenSP"
-                                                                    data-masize="@item.TenSize"
-                                                                    data-mamau="@item.TenMau"
+                                                                    data-trangthai="@item.TrangThai"
                                                                     data-soluongton="@item.SoLuongTon">
                                                                 Chọn
                                                             </button>
@@ -278,52 +291,67 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
                 <div class="col-md-4 border border-5" style="height: 670px;">
                     <div class="row" style="height: 60%;">
-                        <div class="co-md-12" style="height:100px">
+                        <div class="co-md-12" style="height:100px;">
                             <h2>Chi tiết thanh toán</div>
-                        
-                        <table class="info-table">
-                            
-                            <tr>
-                                <th style="width:130px;padding: 12px"> Tổng số tiền sản phẩm</th>
-                                <td><input id="btn_tongtien" style="color:brown;border:none" class="form-control w-100" type="text"></td>
-                                <td>VNĐ</td>
-                            </tr>
-                            <tr>
-                                <th style="width:130px;padding: 12px"> Chọn voucher</th>
-                                <td>
+                        <div class="row-md-12">
+                            <table class="info-table">
+                                <tr>
+                                    <th style="width:130px;padding: 12px"> Giao hàng </th>
+                                    <td>   
+                                        <label class="switch">
+                                            <input type="checkbox" id="btn_giaohang">
+                                            <span class="slider round"></span>
+                                        </label>
                                    
-                                    <select id="btn_MaVoucher" class="form-select" style="color:brown;border:none">
-                                        <option value="">Chọn Voucher</option>
-                                        @foreach (var item in lstvc)
-                                        {
-                                            <option value="@item.MaVoucher" data-giatrigiam="@item.GiaTriGiam">@item.MaVoucher (giảm @item.GiaTriGiam VNĐ)"</option>
-                                        }
-                                    </select>
-                                </td>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th style="width:130px;padding: 12px"> Tổng số tiền sản phẩm</th>
+                                    <td><input id="btn_tongtien" style="color:brown;border:none" class="form-control w-100" type="text"></td>
+                                    <td>VNĐ</td>
+                                </tr>
+                                <tr>
+                                    <th style="width:130px;padding: 12px"> Chọn voucher</th>
+                                    <td>
+                                   
+                                        <select id="btn_MaVoucher" class="form-select" style="color:brown;border:none">
+                                            <option value="">Chọn Voucher</option>
+                                            @foreach (var item in lstvc)
+                                            {
+                                                <option value="@item.MaVoucher" data-giatrigiam="@item.GiaTriGiam">@item.MaVoucher (giảm @item.GiaTriGiam VNĐ)"</option>
+                                            }
+                                        </select>
+                                    </td>
                                
-                            </tr>
-                            <tr>
-                                <th style="width:130px;padding: 12px"> Phí ship</th>
-                                <td><input id="btn_PhiShip" class="form-control" type="number" min="0" placeholder="Nhập phí vậnchuyển" style="color:brown;border:none" /></td>
-                                <td>VNĐ</td>
-                            </tr>
-                                <th style="width:130px;padding: 12px"> Tiền khách phải trả</th>
-                                <td><input id="btn_tienkhachphaitra" style="color:brown;border:none" class="form-control w-100" type="text"></td>
-                                <td>VNĐ</td>
-                            </tr>
-                            <tr>
-                                <th style="width:130px;padding: 12px"> Tiền khách đưa</th>
-                                <td><input id="btn_tienkhachdua" style="color:brown;border:none" class="form-control w-100" type="text"></td>
-                                <td>VNĐ</td>
-                            </tr>
-                            <tr>
-                                <th style="width:130px;padding: 12px"> Tiền thừa</th>
-                                <td><input id="btn_tienthua" style="color:brown;border:none" class="form-control w-100" type="text"></td>
-                                <td>VNĐ</td>
-                            </tr>
-                        </table>               <hr />
+                                </tr>
+                              @*   <tr style="display:none" id="tr_phiship">
+                                
+                                    <th style="width:130px;padding: 12px"> Phí ship</th>
+                                    <td>
+                                        <input id="btn_PhiShip" class="form-control" type="number" min="0" placeholder="Nhập phí vậnchuyển" style="color:brown;border:none" />
+                                     </td>
+                                    <td>VNĐ</td>
+                                </tr> *@
+                                    <th style="width:130px;padding: 12px"> Tiền khách phải trả</th>
+                                    <td><input id="btn_tienkhachphaitra" style="color:brown;border:none" class="form-control w-100" type="text"></td>
+                                    <td>VNĐ</td>
+                                </tr>
+                                <tr>
+                                    <th style="width:130px;padding: 12px"> Tiền khách đưa</th>
+                                    <td><input id="btn_tienkhachdua" style="color:brown;border:none" class="form-control w-100" type="text"></td>
+                                    <td>VNĐ</td>
+                                </tr>
+                                <tr>
+                                    <th style="width:130px;padding: 12px"> Tiền thừa</th>
+                                    <td><input id="btn_tienthua" style="color:brown;border:none" class="form-control w-100" type="text"></td>
+                                    <td>VNĐ</td>
+                                </tr>
+                            </table>               
+                        </div>
+                        <hr />
                         <div class="col-md-12" style="height:40%;">
-                            <div class="row">
+                            <div class="form-container">
+                                <div class="row">
                                 <div class="col-md-4">
 
                                     <select id="btn_phuongthucthanhtoan" class="btn btn-outline-warning w-100" style="height:100%">
@@ -338,18 +366,18 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                                 </div>
                                 <div class="col-md-8">
 
-                                    <div class="col-md-12">
+                                    <div class="col-md-12" id="thanhtoantaiquay" style="display:none">
                                         <button type="button" class="btn btn-info" id="btn_thanhtoanhoadon" style="width: 100%; height: 70px;">
                                             <i class="fa-solid fa-coins fa-2xl" style="color:#de0d0d"></i>
-                                        </button><hr />
+                                        </button>
 
                                     </div>
-                                    <div class="col-md-12" style="position: relative;">
+                                    <div class="col-md-12" style="position: relative;display:none" id="dathangtaiquay">
                                         <button type="button" class="btn btn-outline-success" id="btn_dathang" style="width: 100%; height: 70px; position: relative;">
                                             <i class="fa-solid fa-truck-arrow-right fa-xl" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"></i>
                                         </button>
                                     </div>
-
+                                    </div>
 
                                 </div>
                                
