--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
@@ -17,7 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="~/js/locdetailnguoidung.js"></script>
 <input value="magiohang"/>
-<table id="tb_dataCTSP"  >
+<table id="tb_dataCTSP" style="display:none" >
     <thead>
         <tr>
             <td>
